force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/Dynamic_Apex_Trigger_Configuration__c.object-meta.xml
<CustomObject>
    <label>Dynamic Apex Trigger Configuration</label>
    <nameField>
        <displayFormat>TrigConfig-{0000}</displayFormat>
        <label>Dynamic Apex Trigger Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Apex Trigger Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>