force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/API_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>API_Version_Number__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Use this to identify the API version number under which to build this trigger and the related test classes.</description>
    <inlineHelpText>Use this to identify the API version number under which to build this trigger and the related test classes.</inlineHelpText>
    <label>API Version Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>