force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/Async_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Async_Request_ID__c</fullName>
    <description>This field will show the most recent Async Request ID, which can be used to check check the deploy status.</description>
    <inlineHelpText>This field will show the most recent Async Request ID, which can be used to check check the deploy status.</inlineHelpText>
    <label>Async Request ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>