force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/Deployed__c.field-meta.xml
<CustomField>
    <fullName>Deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this to indicate whether or not this configuration is active. If left unchecked, this configuration will not factor into future dynamic trigger generations.</description>
    <inlineHelpText>Use this to indicate whether or not this configuration is active.</inlineHelpText>
    <label>Deployed</label>
    <type>Checkbox</type>
</CustomField>