force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Use this to identify which field on the above identified standard / custom object to tie the trigger to. Make sure to use the API name of the field.</description>
    <inlineHelpText>Use this to identify which field on the above identified standard / custom object to tie the trigger to.</inlineHelpText>
    <label>Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>