force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/Field_Condition__c.field-meta.xml
<CustomField>
    <fullName>Field_Condition__c</fullName>
    <description>Use this to identify the value on the previously identified field that will cause the trigger to run. The script will look for an exact match.</description>
    <inlineHelpText>Use this to identify the value on the previously identified field that will cause the trigger to run. The script will look for an exact match.</inlineHelpText>
    <label>Field Condition</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>