force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/On_Complete_Callback__c.field-meta.xml
<CustomField>
    <fullName>On_Complete_Callback__c</fullName>
    <description>Use this to identify the class or method to run when the trigger conditions are met. If there is an error here, the trigger will not be generated, so make sure to follow proper Apex syntax.</description>
    <inlineHelpText>Use this to identify the class or method to run when the trigger conditions are met. If there is an error here, the trigger will not be generated, so make sure to follow proper Apex syntax.</inlineHelpText>
    <label>On Complete Callback</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>