force-app/main/default/objects/Dynamic_Apex_Trigger_Configuration__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>Use this to identify the standard / custom object to associate with the trigger. Make sure to use the API name.</description>
    <inlineHelpText>Use this to identify the standard / custom object to associate with the trigger. Make sure to use the API name.</inlineHelpText>
    <label>SObject Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>